--- a/LabFinder/package.json
+++ b/LabFinder/package.json
@@ -7,8 +7,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "0.58.4"
+    "@mapbox/mapbox-sdk": "^0.5.0",
+    "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "react": "16.6.0-alpha.8af6728",
+    "react-native": "^0.57.8",
+    "react-native-elements": "^0.19.1",
+    "react-native-modal": "^7.0.2",
+    "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-modal-dropdown": "^0.6.2",
+    "react-native-popup-menu": "^0.15.0",
+    "react-native-progress": "^3.5.0",
+    "react-native-vector-icons": "^6.1.0",
+    "react-native-view-shot": "^2.5.0",
+    "react-navigation": "^2.18.2",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
