--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@mapbox/mapbox-sdk": "^0.5.0",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "react": "16.6.3",
-    "react-native": "0.58.4",
+    "react-native": "^0.58.4",
     "react-native-elements": "^1.0.0",
     "react-native-modal": "^7.0.2",
     "react-native-modal-datetime-picker": "^6.0.0",
