--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.5.0",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
+    "accordion-collapse-react-native": "^0.1.9",
     "react": "16.6.3",
     "react-native": "^0.58.4",
+    "react-native-accordion": "^1.0.1",
+    "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^1.0.0",
     "react-native-modal": "^7.0.2",
     "react-native-modal-datetime-picker": "^6.0.0",
